Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136653

tst_QAbstractItemView::testDialogAsEditor() crash on Ubuntu 24.04 x11

XMLWordPrintable

    • Linux/X11
    • 58215a182 (dev), f0019c513 (dev), 62583dac9 (6.10), 3a545d758 (6.9), 22c585c84 (tqtc/lts-6.8), d2602f5fd (dev), ef76739c8 (dev)

      In Coin/CI, it crashes on Ubuntu 24.04(x11, x86_64)

      https://testresults.qt.io/coin/api/log/qt/qtbase/76a3d178a282ce61d41ff84d08620d7037771706/LinuxUbuntu_24_04x86_64LinuxUbuntu_24_04x86_64GCCqtci-linux-Ubuntu-24.04-x86_64-51-3e140dSccache_TestOnly/299abe7eea1a8a841caed45b8165a0f6c902cdf4/test_1744646187/testresults.tar.gz - See the CTest.log file in it.

      backtrace-u2404-x11-x64-ci.txt

      Thread 1 (Thread 0x7295b0b228c0 (LWP 809362) "tst_qabstractit"):
      #0  0x00007295afd107e3 in __GI___wait4 (pid=809391, stat_loc=0x0, options=0, usage=0x0) at ../sysdeps/unix/sysv/linux/wait4.c:30
      #1  0x00007295b219e5ed in QTest::CrashHandler::generateStackTrace () at /home/qt/work/qt/qtbase/src/testlib/qtestcrashhandler.cpp:375
      #2  QTest::CrashHandler::generateStackTrace () at /home/qt/work/qt/qtbase/src/testlib/qtestcrashhandler.cpp:332
      #3  0x00007295b219ea2f in QTest::CrashHandler::FatalSignalHandler::actionHandler (signum=11, info=<optimized out>) at /home/qt/work/qt/qtbase/src/testlib/qtestcrashhandler.cpp:642
      #4  0x00007295afc45330 in <signal handler called> () at /lib/x86_64-linux-gnu/libc.so.6
      #5  0x00007295b19d39c8 in QObject::parent (this=0x7295a00069c0) at /home/qt/work/qt/qtbase/src/corelib/tools/qscopedpointer.h:90
      #6  QWidget::parentWidget (this=0x7295a00069c0) at /home/qt/work/qt/qtbase/src/widgets/kernel/qwidget.h:909
      #7  QWidget::window (this=this@entry=0x7295a00069c0) at /home/qt/work/qt/qtbase/src/widgets/kernel/qwidget.cpp:4336
      #8  0x00007295b19cf888 in operator() (__closure=<synthetic pointer>) at /home/qt/work/qt/qtbase/src/widgets/kernel/qtestsupport_widgets.cpp:105
      #9  operator() (__closure=<synthetic pointer>) at /home/qt/work/qt/qtbase/src/widgets/kernel/qtestsupport_widgets.cpp:26
      #10 QTest::qWaitFor<qWaitForWidgetWindow<QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int>(QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int)::<lambda()> > (deadline=..., predicate=...) at /home/qt/work/qt/qtbase/src/corelib/kernel/qtestsupport_core.h:47
      #11 QTest::qWaitFor<qWaitForWidgetWindow<QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int>(QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int)::<lambda()> > (timeout=5000, predicate=...) at /home/qt/work/qt/qtbase/src/corelib/kernel/qtestsupport_core.h:63
      #12 qWaitForWidgetWindow<QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int> (timeout=5000, predicate=..., windowGetter=...) at /home/qt/work/qt/qtbase/src/widgets/kernel/qtestsupport_widgets.cpp:25
      #13 QTest::qWaitForWindowExposed (widget=0x7295a00069c0, timeout=timeout@entry=5000) at /home/qt/work/qt/qtbase/src/widgets/kernel/qtestsupport_widgets.cpp:105
      #14 0x00005980e299e978 in tst_QAbstractItemView::testDialogAsEditor (this=<optimized out>) at /home/qt/work/qt/qtbase/tests/auto/widgets/itemviews/qabstractitemview/tst_qabstractitemview.cpp:2324
      

      And I have Ubuntu 25.04 arm64 vm locally, I tried the test with stress way, it happens sometimes, not every time.

      backtrace-u2504-x11-arm64-local-vm.txt

      Thread 1 (Thread 0xe26e77689020 (LWP 75526) "tst_qabstractit"):
      #0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/aarch64/syscall_cancel.S:50
      #1  0x0000e26e756e49b8 in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=0, a6=a6@entry=0, nr=nr@entry=260) at ./nptl/cancellation.c:49
      #2  0x0000e26e756e49fc [PAC] in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=0, a6=a6@entry=0, nr=nr@entry=260) at ./nptl/cancellation.c:75
      #3  0x0000e26e7573ec24 [PAC] in __GI___wait4 (pid=<optimized out>, stat_loc=<optimized out>, options=<optimized out>, usage=<optimized out>) at ../sysdeps/unix/sysv/linux/wait4.c:30
      #4  0x0000e26e784822bc [PAC] in QTest::CrashHandler::generateStackTrace () at /home/liangqi/qt/qtbase/src/testlib/qtestcrashhandler.cpp:375
      #5  0x0000e26e78482bc4 in QTest::CrashHandler::FatalSignalHandler::actionHandler (signum=11, info=0xe26e7559eda0) at /home/liangqi/qt/qtbase/src/testlib/qtestcrashhandler.cpp:642
      #6  0x0000e26e7855f9a0 in <signal handler called> ()
      #7  0x0000e26e7787e490 in QObject::parent (this=0xe26e64001680) at /mnt/hgfs/liangqi/qt/qtbase/src/corelib/kernel/qobject.h:348
      #8  0x0000e26e7787fcf8 in QWidget::parentWidget (this=0xe26e64001680) at /mnt/hgfs/liangqi/qt/qtbase/src/widgets/kernel/qwidget.h:908
      #9  0x0000e26e77916c04 in QWidget::window (this=0xe26e64001680) at /home/liangqi/qt/qtbase/src/widgets/kernel/qwidget.cpp:4338
      #10 0x0000e26e77907234 in operator() (__closure=0xffffe6033208) at /home/liangqi/qt/qtbase/src/widgets/kernel/qtestsupport_widgets.cpp:105
      #11 0x0000e26e77907a90 in operator() (__closure=0xffffe6033170) at /home/liangqi/qt/qtbase/src/widgets/kernel/qtestsupport_widgets.cpp:26
      #12 0x0000e26e77907f80 in QTest::qWaitFor<qWaitForWidgetWindow<QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int>(QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int)::<lambda()> >(struct {...}, QDeadlineTimer) (predicate=..., deadline=...) at /mnt/hgfs/liangqi/qt/qtbase/src/corelib/kernel/qtestsupport_core.h:47
      #13 0x0000e26e77907d84 in QTest::qWaitFor<qWaitForWidgetWindow<QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int>(QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int)::<lambda()> >(struct {...}, int) (predicate=..., timeout=5000) at /mnt/hgfs/liangqi/qt/qtbase/src/corelib/kernel/qtestsupport_core.h:63
      #14 0x0000e26e77907b34 in qWaitForWidgetWindow<QTest::qWaitForWindowExposed(QWidget*, int)::<lambda()>, QTest::qWaitForWindowExposed(QWidget*, int)::<lambda(QWindow*)>, int>(struct {...}, struct {...}, int) (windowGetter=..., predicate=..., timeout=5000) at /home/liangqi/qt/qtbase/src/widgets/kernel/qtestsupport_widgets.cpp:25
      #15 0x0000e26e779072a4 in QTest::qWaitForWindowExposed (widget=0xe26e64001680, timeout=5000) at /home/liangqi/qt/qtbase/src/widgets/kernel/qtestsupport_widgets.cpp:105
      #16 0x0000b785bdc57cb4 in tst_QAbstractItemView::testDialogAsEditor (this=0xffffe6033e48) at /home/liangqi/qt/qtbase/tests/auto/widgets/itemviews/qabstractitemview/tst_qabstractitemview.cpp:2324
      

      EDIT by jimis: this test has been introduced here: https://codereview.qt-project.org/c/qt/qtbase/+/147871

        For Gerrit Dashboard: QTBUG-136653
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated: